--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.11.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 Django==5.2.8
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+idna==3.11
 numpy==2.3.5
 pandas==2.3.3
 psycopg2-binary==2.9.11
@@ -10,6 +13,8 @@ PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
+requests==2.32.5
 six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
+urllib3==2.5.0
